--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3Dスクロールアニメーション</title>
   </head>
-  <body>
+  <body style="background-color:#000">
     <canvas id="webgl"></canvas>
     <main>
       <h1>Portfolio</h1>
