--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3Dスクロールアニメーション</title>
   </head>
-  <body style="background-color:#000">
+  <body style="background-color:#1a1a1a">
     <canvas id="webgl"></canvas>
     <main>
-      <h1>Portfolio</h1>
+      <h1>WebGL</h1>
       <section>
-        <h2>突き詰める最強のスキルを</h2>
+        <h2>Webブラウザを使った３D表現</h2>
       </section>
       <section>
-        <h2>My Project</h2>
-        <p>私の作った作品です</p>
+        <h2>Three.js</h2>
+        <p>立体を描画するのに便利なライブラリ</p>
       </section>
       <section>
-        <h2>My Skills</h2>
-        <p>HTML/CSS/JavaScript</p>
+        <h2>Scroll Animation</h2>
+        <p>スクロールとアニメーションの進捗を同期</p>
       </section>
       <section>
-        <h2>Engineer</h2>
-        <p>学び続ける好奇心</p>
+        <h2>Lerp</h2>
+        <p>線形補間で動きを滑らかに</p>
       </section>
       <section>
         <h2>Contact</h2>
